# variant

./: .gitmodules  Backports.cmake  Batch.cmake  CMakeDependentSelection.cmake  CMakeLists.txt  Fortran.cmake  FortranPreProcess.cmake  FunctionExtension.cmake  GeneratedSources.cmake  Intel.cmake  README.md  Sanitizers.cmake  Warnings.cmake
.cmake/: Backports.cmake  Batch.cmake  CMakeDependentCacheVar.cmake  CMakeDependentSelection.cmake  DependencyInjection.cmake  FortranPreProcess.cmake  GeneratedSources.cmake  Intel.cmake  JSONParser.cmake  README.md  Sanitizers.cmake  Selection.cmake  shaclConfig.cmake  variantConfig.cmake
.cmake/Backports/: MPI.cmake  OpenMP.cmake  SeparateArguments.cmake  X11.cmake
.cmake/DependencyInjection/: add_executable.cmake  add_library.cmake
.cmake/Fortran/: Backtrace.cmake  Integer.cmake  ModuleDirectory.cmake  NoBackslashEscape.cmake  Real.cmake  Standard.cmake  StandardAdherence.cmake  TempArrays.cmake
.cmake/FortranPreProcess/: FortranPreProcess.cmake  filename.cmake  target_sources.cmake
.cmake/FunctionExtension/: add_executable.cmake  call.cmake  decrement.cmake  increment.cmake  pop.cmake  push.cmake  set_property.cmake  set_target_properties.cmake
.cmake/GeneratedSources/: ListBinaryDir.cmake  README.md  add_executable.cmake  add_library.cmake  stripped.cmake  target_sources.cmake
.cmake/Intel/: FPModel.cmake  FPSpeculation.cmake  FortranAssumptions.cmake  FortranStandardAdherence.cmake
.cmake/JSONParser/: sbeAddEscapedCharacter.cmake  sbeMoveToNextNonEmptyCharacter.cmake  sbeParse.cmake  sbeParseArray.cmake  sbeParseJson.cmake  sbePrintJson.cmake
.cmake/LinkOptions/: StackSize.cmake
.cmake/Warnings/: C.cmake  CUDA.cmake  CXX.cmake  Fortran.cmake
.cmake/tests/FunctionExtension/set_property/: CMakeLists.txt
.cmake/tests/FunctionExtension/set_target_properties/: CMakeLists.txt
.cmake/tests/GeneratedSources/target_sources/: CMakeLists.txt  test2
Backports/: IncludeGuard.cmake  X11.cmake
Batch/: Slurm.cmake
DependencyInjection/: add_executable.cmake
Fortran/: Backtrace.cmake  Integer.cmake  ModuleDirectory.cmake  Real.cmake  Standard.cmake  TempArrays.cmake
FortranPreProcess/: FortranPreProcess.cmake  filename.cmake
FunctionExtension/: add_library.cmake  backup.cmake  find_package.cmake  push.cmake  target_sources.cmake
GeneratedSources/: ListBinaryDir.cmake  add_executable.cmake  add_library.cmake  configure_directory.cmake  generated_sources_trap.cmake
Intel/: FPModel.cmake  FortranStandardAdherence.cmake
JSONParser/: sbeClearJson.cmake  sbeParseNameValue.cmake  sbeParseObject.cmake  sbeParseReservedWord.cmake  sbeParseValue.cmake
LinkOptions/: StackSize.cmake
Warnings/: C.cmake  Fortran.cmake
cmake/: CTestCustom.cmake  shacl-variant-config.cmake
include/shacl/variant/: CMakeLists.txt  IsInstance.hpp  bind.hpp  cast.hpp  detail.hpp  map.hpp  normalize.hpp  visit.hpp
include/shacl/variant/bind/: README.md
include/shacl/variant/bind/test/: CMakeLists.txt  callable.hpp
include/shacl/variant/cast/test/: CMakeLists.txt  cast.test.cpp
include/shacl/variant/detail/: CMakeLists.txt  Curry.hpp  alternatives_of.hpp  arguments_of.hpp  construct.hpp  demux.hpp  possible_result_types_of.hpp  results.hpp  sfinae.hpp
include/shacl/variant/detail/alternatives_of/test/: CMakeLists.txt
include/shacl/variant/detail/argument_type_product/test/: CMakeLists.txt
include/shacl/variant/detail/arguments_of/test/: CMakeLists.txt
include/shacl/variant/detail/construct/test/: CMakeLists.txt  construct.test.cpp
include/shacl/variant/detail/decay/test/: CMakeLists.txt
include/shacl/variant/detail/invoke/test/: CMakeLists.txt  invoke.test.cpp
include/shacl/variant/detail/is_constructible/test/: CMakeLists.txt  is_constructible.test.cpp
include/shacl/variant/detail/possible_result_types_of/test/: CMakeLists.txt
include/shacl/variant/detail/sfinae/: CMakeLists.txt  partial.hpp
include/shacl/variant/detail/sum/test/: CMakeLists.txt
include/shacl/variant/detail/to_variant/test/: CMakeLists.txt  to_variant.test.cpp
include/shacl/variant/map/test/: CMakeLists.txt  f.hpp  map.test.cpp
include/shacl/variant/visit/test/: CMakeLists.txt  callable.hpp  f.hpp  visit.test.cpp
src/shacl/: variant.hpp  (+1 more)
src/shacl/variant/: CMakeLists.txt  bind.hpp  cast.hpp  detail.hpp  map.hpp  visit.hpp
src/shacl/variant/bind/: README.md
src/shacl/variant/bind/test/: CMakeLists.txt  bind.test.cpp  f.hpp
src/shacl/variant/cast/: README.md
src/shacl/variant/cast/test/: CMakeLists.txt
src/shacl/variant/detail/: CMakeLists.txt  Curry.hpp  alternatives_of.hpp  argument_type_product.hpp  arguments_of.hpp  decay.hpp  invoke.hpp  is_constructible.hpp  possible_result_types_of.hpp  sum.hpp  to_variant.hpp
src/shacl/variant/detail/alternatives_of/test/: CMakeLists.txt  alternatives_of.test.cpp
src/shacl/variant/detail/argument_type_product/test/: CMakeLists.txt  argument_type_product.test.cpp
src/shacl/variant/detail/arguments_of/test/: CMakeLists.txt  arguments_of.test.cpp
src/shacl/variant/detail/construct/test/: CMakeLists.txt
src/shacl/variant/detail/decay/test/: CMakeLists.txt  decay.test.cpp
src/shacl/variant/detail/invoke/test/: CMakeLists.txt
src/shacl/variant/detail/is_constructible/test/: CMakeLists.txt
src/shacl/variant/detail/possible_result_types_of/test/: CMakeLists.txt  possible_result_types_of.test.cpp
src/shacl/variant/detail/sfinae/: CMakeLists.txt  reverse_partial.hpp  transform.hpp  unpack.hpp
src/shacl/variant/detail/sum/test/: CMakeLists.txt  sum.test.cpp
src/shacl/variant/detail/to_variant/test/: CMakeLists.txt
src/shacl/variant/map/: README.md
src/shacl/variant/map/test/: CMakeLists.txt  callable.hpp
src/shacl/variant/visit/: README.md
src/shacl/variant/visit/test/: CMakeLists.txt  Result.test.cpp
tests/Backports/SeparateArguments/: CMakeLists.txt  test.cpp
tests/Fortran/NoBackslashEscape/: CMakeLists.txt
tests/Fortran/Standard/: CMakeLists.txt
tests/Fortran/StandardAdherence/: CMakeLists.txt
tests/GeneratedSources/target_sources/: CMakeLists.txt  test1  test2
(+93 files in other folders)
