target_sources(variant INTERFACE
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/alternatives_of.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/arguments_of.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/argument_type_product.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/construct.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/Curry.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/decay.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/demux.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/invoke.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/is_constructible.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/possible_result_types_of.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sfinae.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/sum.hpp>
  $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/to_variant.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/alternatives_of.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/arguments_of.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/argument_type_product.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/construct.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/Curry.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/decay.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/demux.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/invoke.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/is_constructible.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/possible_result_types_of.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/sfinae.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/sum.hpp>
  $<INSTALL_INTERFACE:include/shacl/variant/detail/to_variant.hpp>)

add_subdirectory(sfinae)

if(variant.tests)
  add_subdirectory(alternatives_of/test)
  add_subdirectory(arguments_of/test)
  add_subdirectory(argument_type_product/test)
  add_subdirectory(construct/test)
  add_subdirectory(decay/test)
  add_subdirectory(invoke/test)
  add_subdirectory(is_constructible/test)
  add_subdirectory(possible_result_types_of/test)
  add_subdirectory(sum/test)
  add_subdirectory(to_variant/test)
endif()
